cleaned up example and added last.fm

--- a/Soundcloud Recommendations.ipynb
+++ b/Soundcloud Recommendations.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7f28ab1f6f6022fedb5033a546bb2bab4aa77f71abb3eb0d32ec48b29005cb76"
+  "signature": "sha256:9fbb3f9f201e652b579ebb25e482036ef20a67319ac5e8a0117b2eb6187f25bc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,13 @@
      "metadata": {},
      "source": [
       "Soundcloud API"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This is a prototype example for Johannes' DSR project http://jobraun.tumblr.com/ to demonstrate that it is possible to create a candidate list of music recommendations that isn\u2019t horrible with current Soundcloud API functionality :"
      ]
     },
     {
@@ -45,7 +52,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 191
+     "prompt_number": 253
     },
     {
      "cell_type": "code",
@@ -61,7 +68,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 192
+     "prompt_number": 254
     },
     {
      "cell_type": "code",
@@ -72,7 +79,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 194
+     "prompt_number": 255
     },
     {
      "cell_type": "code",
@@ -92,7 +99,7 @@
        ]
       }
      ],
-     "prompt_number": 195
+     "prompt_number": 256
     },
     {
      "cell_type": "code",
@@ -116,7 +123,7 @@
        ]
       }
      ],
-     "prompt_number": 196
+     "prompt_number": 257
     },
     {
      "cell_type": "code",
@@ -143,13 +150,13 @@
        "stream": "stdout",
        "text": [
         "Track ID: 37032471, Title: \"Paul Kalkbrenner - Sky And Sand (Feat. Fritz Kalkbrenner)\n",
-        "Username: PaulKalkbrenner, Popularity: 2224341, 39909, 1161\n",
+        "Username: PaulKalkbrenner, Popularity: 2228630, 39981, 1161\n",
         "Tags: Paul Kalkbrenner Sky And Sand (Feat Fritz Kalkbrenner)\n",
         "Description: \n"
        ]
       }
      ],
-     "prompt_number": 199
+     "prompt_number": 258
     },
     {
      "cell_type": "markdown",
@@ -187,7 +194,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 200,
+       "prompt_number": 259,
        "text": [
         "{'artwork_url': None,\n",
         " 'attachments_uri': 'https://api.soundcloud.com/tracks/37032471/attachments',\n",
@@ -200,7 +207,7 @@
         " 'downloadable': False,\n",
         " 'duration': 239529,\n",
         " 'embeddable_by': 'all',\n",
-        " 'favoritings_count': 39909,\n",
+        " 'favoritings_count': 39981,\n",
         " 'genre': u'',\n",
         " 'id': 37032471,\n",
         " 'isrc': u'',\n",
@@ -214,7 +221,7 @@
         " 'original_format': 'mp3',\n",
         " 'permalink': 'paul-kalkbrenner-sky-and',\n",
         " 'permalink_url': 'http://soundcloud.com/paulkalkbrenner/paul-kalkbrenner-sky-and',\n",
-        " 'playback_count': 2224341,\n",
+        " 'playback_count': 2228630,\n",
         " 'policy': 'ALLOW',\n",
         " 'purchase_title': None,\n",
         " 'purchase_url': None,\n",
@@ -244,7 +251,7 @@
        ]
       }
      ],
-     "prompt_number": 200
+     "prompt_number": 259
     },
     {
      "cell_type": "code",
@@ -278,13 +285,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 201
+     "prompt_number": 260
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Get all users who favour this track (takes 20 seconds)\n",
+      "#Get all (<1000) users who favour this track (takes 20 seconds)\n",
       "\n",
       "print 'Track ID: %d' % tid\n",
       "\n",
@@ -315,21 +322,21 @@
        "text": [
         "\n",
         "       Id  Username\n",
-        "---------  --------------------\n",
-        " 68442615  Sanne vanGool\n",
-        "  2834954  mantihans\n",
-        "122535587  Michael Schartow\n",
-        " 19491679  Maarten.dorr\n",
-        "126783247  Amaya del Pozo Ant\u00f3n\n",
-        "  1538112  lamar ahchee\n",
-        " 16451917  sophiesimone\n",
-        "  3870220  Emmy Hammelfelt\n",
-        "  8262706  Where-is-albo?\n",
+        "---------  -----------------------\n",
+        " 63840159  Victor Freou\n",
+        " 44526069  Jamie Joy W\n",
+        "126927203  Carmela Salerno\n",
+        " 33616623  Gabriel Twist\n",
+        "  8775696  Sam Chisholm\n",
+        " 98572685  user223944179\n",
+        "101715853  Paulo Francisco Rabiega\n",
+        " 16410022  Asia Susmanek\n",
+        "126915459  fef31\n",
         "...\n"
        ]
       }
      ],
-     "prompt_number": 202
+     "prompt_number": 261
     },
     {
      "cell_type": "code",
@@ -357,6 +364,7 @@
      "collapsed": false,
      "input": [
       "#http://api.mongodb.org/python/current/tutorial.html\n",
+      "#in aws: mongod --fork --logpath ~/mongodb.log\n",
       "\n",
       "import json\n",
       "import pymongo # pip install pymongo\n",
@@ -370,7 +378,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 205
+     "prompt_number": 262
     },
     {
      "cell_type": "code",
@@ -632,7 +640,7 @@
        ]
       }
      ],
-     "prompt_number": 209
+     "prompt_number": 266
     },
     {
      "cell_type": "code",
